<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="indiangame.in.LifafaActivity">

    <item
        android:id="@+id/action_addMoney"
        android:orderInCategory="100"
        android:title="@string/action_addmoney"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"/>

    <item
        android:id="@+id/action_create"
        android:orderInCategory="100"
        android:title="@string/action_create"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_created"
        android:orderInCategory="100"
        android:title="@string/action_created"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_received"
        android:orderInCategory="100"
        android:title="@string/action_received"
        app:showAsAction="never" />

</menu>